switch forward and backward search in vi-copy mode (and fix term)

--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -52,8 +52,7 @@ set-option -sg escape-time 0
 #========== Appearance {{{
 #-------------------------------------------------
 # 256 colour
-# set -g default-terminal "screen-256color"
-set -g default-terminal "screen-bce"
+set -g default-terminal "screen-256color"
 
 #========== Pane Colours {{{
 # pane divider color; non active panes can change color
@@ -219,7 +218,10 @@ bind-key -t vi-copy J next-space-end
 # bind-key -t vi-copy c-n bottom-line
 # bind-key -t vi-copy c-m middle-line
 # bind-key -t vi-copy c-e top-line
-
+ 
+# pretty much always searching backwards
+bind-key -t vi-copy / search-backward
+bind-key -t vi-copy ? search-forward
 
 # run "tmux show-buffer | xsel -i -b"
 bind-key -t vi-copy r rectangle-toggle                 # visual block toggle
