remove all mailboxes before adding (so all accounts' mailboxes don't show up in the sidebar)

--- a/mail_and_cal/.muttnoctrc.example
+++ b/mail_and_cal/.muttnoctrc.example
@@ -20,6 +20,7 @@ alternates myalternate email addresses
 
 # for showing in sidebar
 # specifies folders that can recieve mail and will be checked for new messages
+unmailboxes *
 mailboxes "+nocturnalartifice/Inbox" "+nocturnalartifice/[Gmail]/.Starred" "+nocturnalartifice/[Gmail]/.Sent Mail" "+nocturnalartifice/[Gmail]/.All Mail" "+nocturnalartifice/[Gmail]/.Trash"
 
 # actually move to trash
