--- a/mail_and_cal/.gnupg/gpg-agent.conf
+++ b/mail_and_cal/.gnupg/gpg-agent.conf
@@ -3,3 +3,8 @@ default-cache-ttl 10800
 # maximum time an entry can be valid (if access again within above amount of time, it will be reset; after the amount of time below, will be forced to give pass again even if recently accessed)
 # 24 hours
 max-cache-ttl 86400
+
+# PIN entry program
+# pinentry-program /usr/bin/pinentry-qt4
+# pinentry-program /usr/bin/pinentry-gtk-2
+pinentry-program /usr/bin/pinentry-curses
